--- a/.gitignore
+++ b/.gitignore
@@ -136,5 +136,8 @@ GitHub.sublime-settings
 !.vscode/extensions.json
 .history
 
-# .gitignore
+
+# Ignore migration files
+*.sql
+*.sqlite
 /migrations/
